--- a/src/UserInterface/ListOfContactsView.fxml
+++ b/src/UserInterface/ListOfContactsView.fxml
@@ -3,6 +3,6 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<GridPane fx:controller="UserInterface.Controller"
+<GridPane fx:controller="UserInterface.ListOfContactsController"
           xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
 </GridPane>
