--- a/src/UserInterface/style.css
+++ b/src/UserInterface/style.css
@@ -1,7 +1,7 @@
 
-.table-view .column-header .label{
-    -fx-cell-size: 50px;
-    -fx-font-size: 18px;
+.table-view .column-header {
+    -fx-cell-size: 40px;
+    -fx-font-size: 24px;
     -fx-font-family: "Impact";
     -fx-alignment: center;
 
@@ -9,8 +9,8 @@
 
 
 .table-row-cell {
-    -fx-cell-size: 50px;
-    -fx-font-size: 18px;
+    -fx-cell-size: 45px;
+    -fx-font-size: 24px;
     -fx-font-family: "Impact";
-    -fx-alignment: center-left;
+    -fx-alignment: bottom-left;
 }
