--- a/src/userinterface/ContactView.fxml
+++ b/src/userinterface/ContactView.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="864.0" prefWidth="1536.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="userinterface.ContactController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="864.0" prefWidth="1536.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="userinterface.ContactController">
    <children>
       <VBox layoutX="618.0" layoutY="100.0" prefHeight="834.0" prefWidth="600.0">
          <children>
@@ -102,7 +102,7 @@
                   <Insets top="30.0" />
                </VBox.margin>
                <children>
-                  <Button fx:id="okButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="34.0" prefWidth="80.0" text="Ok">
+                  <Button fx:id="okButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#actionSave" prefHeight="34.0" prefWidth="80.0" text="Ok">
                      <font>
                         <Font name="Impact" size="18.0" />
                      </font>
