--- a/src/UserInterface/ContactView.fxml
+++ b/src/UserInterface/ContactView.fxml
@@ -9,89 +9,89 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="864.0" prefWidth="1536.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UserInterface.ContactView">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="864.0" prefWidth="1536.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1"  fx:controller="UserInterface.ContactController">
    <children>
-      <VBox layoutX="618.0" layoutY="100.0" prefHeight="834.0" prefWidth="600.0">
+      <VBox layoutX="568.0" layoutY="80.0" prefHeight="740.0" prefWidth="600.0">
          <children>
-            <Label alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="22.0" prefWidth="300.0" text="Label - Add or Update">
+            <Label alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="29.0" prefWidth="400.0" text="Label - Add or Update">
                <font>
-                  <Font name="Impact" size="18.0" />
+                  <Font name="Impact" size="24.0" />
                </font>
             </Label>
-            <Label text="First name:">
+            <Label maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="29.0" prefWidth="108.0" text="First name:">
                <font>
-                  <Font name="Impact" size="18.0" />
+                  <Font name="Impact" size="24.0" />
                </font>
                <VBox.margin>
                   <Insets top="30.0" />
                </VBox.margin></Label>
-            <TextField fx:id="firstNameField" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="34.0" prefWidth="300.0">
+            <TextField fx:id="firstNameField" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="45.0" prefWidth="400.0">
                <font>
-                  <Font name="Impact" size="18.0" />
+                  <Font name="Impact" size="24.0" />
                </font>
                <VBox.margin>
                   <Insets top="15.0" />
                </VBox.margin>
             </TextField>
-            <Label layoutX="10.0" layoutY="52.0" text="Last name:">
+            <Label layoutX="10.0" layoutY="52.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="29.0" prefWidth="105.0" text="Last name:">
                <font>
-                  <Font name="Impact" size="18.0" />
+                  <Font name="Impact" size="24.0" />
                </font>
                <VBox.margin>
                   <Insets top="30.0" />
                </VBox.margin>
             </Label>
-            <TextField fx:id="lastNameField" layoutX="10.0" layoutY="84.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="34.0" prefWidth="300.0">
+            <TextField fx:id="lastNameField" layoutX="10.0" layoutY="84.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="45.0" prefWidth="400.0">
                <font>
-                  <Font name="Impact" size="18.0" />
+                  <Font name="Impact" size="24.0" />
                </font>
                <VBox.margin>
                   <Insets top="15.0" />
                </VBox.margin>
             </TextField>
-            <Label layoutX="10.0" layoutY="52.0" text="Phone:">
+            <Label layoutX="10.0" layoutY="52.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="29.0" prefWidth="67.0" text="Phone:">
                <font>
-                  <Font name="Impact" size="18.0" />
+                  <Font name="Impact" size="24.0" />
                </font>
                <VBox.margin>
                   <Insets top="30.0" />
                </VBox.margin>
             </Label>
-            <TextField fx:id="phoneField" layoutX="10.0" layoutY="84.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="34.0" prefWidth="300.0">
+            <TextField fx:id="phoneField" layoutX="10.0" layoutY="84.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="45.0" prefWidth="400.0">
                <font>
-                  <Font name="Impact" size="18.0" />
+                  <Font name="Impact" size="24.0" />
                </font>
                <VBox.margin>
                   <Insets top="15.0" />
                </VBox.margin>
             </TextField>
-            <Label layoutX="10.0" layoutY="138.0" text="Address:">
+            <Label layoutX="10.0" layoutY="138.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="29.0" prefWidth="86.0" text="Address:">
                <font>
-                  <Font name="Impact" size="18.0" />
+                  <Font name="Impact" size="24.0" />
                </font>
                <VBox.margin>
                   <Insets top="30.0" />
                </VBox.margin>
             </Label>
-            <TextField fx:id="addressField" layoutX="10.0" layoutY="170.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="34.0" prefWidth="300.0">
+            <TextField fx:id="addressField" layoutX="10.0" layoutY="170.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="45.0" prefWidth="400.0">
                <font>
-                  <Font name="Impact" size="18.0" />
+                  <Font name="Impact" size="24.0" />
                </font>
                <VBox.margin>
                   <Insets top="15.0" />
                </VBox.margin>
             </TextField>
-            <Label layoutX="10.0" layoutY="310.0" text="Email:">
+            <Label layoutX="10.0" layoutY="310.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="29.0" prefWidth="59.0" text="Email:">
                <font>
-                  <Font name="Impact" size="18.0" />
+                  <Font name="Impact" size="24.0" />
                </font>
                <VBox.margin>
                   <Insets top="30.0" />
                </VBox.margin>
             </Label>
-            <TextField fx:id="emailField" layoutX="10.0" layoutY="342.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="34.0" prefWidth="300.0">
+            <TextField fx:id="emailField" layoutX="10.0" layoutY="342.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="45.0" prefWidth="400.0">
                <font>
-                  <Font name="Impact" size="18.0" />
+                  <Font name="Impact" size="24.0" />
                </font>
                <VBox.margin>
                   <Insets top="15.0" />
@@ -102,20 +102,20 @@
                   <Insets top="30.0" />
                </VBox.margin>
                <children>
-                  <Button fx:id="okButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="34.0" prefWidth="80.0" text="Ok">
+                  <Button fx:id="okButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="45.0" prefWidth="102.0" text="Ok">
                      <font>
-                        <Font name="Impact" size="18.0" />
+                        <Font name="Impact" size="24.0" />
                      </font>
                      <HBox.margin>
-                        <Insets left="40.0" />
+                        <Insets left="65.0" top="10.0" />
                      </HBox.margin>
                   </Button>
-                  <Button fx:id="cancelButton" layoutX="10.0" layoutY="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="34.0" prefWidth="80.0" text="Cancel">
+                  <Button fx:id="cancelButton" layoutX="10.0" layoutY="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="45.0" prefWidth="102.0" text="Cancel">
                      <font>
-                        <Font name="Impact" size="18.0" />
+                        <Font name="Impact" size="24.0" />
                      </font>
                      <HBox.margin>
-                        <Insets left="60.0" />
+                        <Insets left="66.0" top="10.0" />
                      </HBox.margin>
                   </Button>
                </children>
