--- a/src/userinterface/ListOfContactsView.fxml
+++ b/src/userinterface/ListOfContactsView.fxml
@@ -79,7 +79,7 @@
                <children>
                   <HBox prefHeight="45.0" prefWidth="200.0">
                      <children>
-                        <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="35.0" prefWidth="78.0" text="Update">
+                        <Button fx:id="updateButton0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="35.0" prefWidth="78.0" text="Update">
                            <font>
                               <Font name="Impact" size="18.0" />
                            </font>
@@ -87,7 +87,7 @@
                               <Insets left="20.0" top="5.0" />
                            </HBox.margin>
                         </Button>
-                        <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="78.0" text="Delete">
+                        <Button fx:id="deleteButton0" mnemonicParsing="false" prefHeight="35.0" prefWidth="78.0" text="Delete">
                            <HBox.margin>
                               <Insets left="20.0" top="5.0" />
                            </HBox.margin>
@@ -99,7 +99,7 @@
                   </HBox>
                   <HBox layoutX="10.0" layoutY="10.0" prefHeight="45.0" prefWidth="200.0">
                      <children>
-                        <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="35.0" prefWidth="78.0" text="Update">
+                        <Button fx:id="updateButton1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="35.0" prefWidth="78.0" text="Update">
                            <font>
                               <Font name="Impact" size="18.0" />
                            </font>
@@ -107,7 +107,7 @@
                               <Insets left="20.0" top="5.0" />
                            </HBox.margin>
                         </Button>
-                        <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="78.0" text="Delete">
+                        <Button fx:id="deleteButton1" mnemonicParsing="false" prefHeight="35.0" prefWidth="78.0" text="Delete">
                            <HBox.margin>
                               <Insets left="20.0" top="5.0" />
                            </HBox.margin>
@@ -119,7 +119,7 @@
                   </HBox>
                   <HBox layoutX="10.0" layoutY="55.0" prefHeight="45.0" prefWidth="200.0">
                      <children>
-                        <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="35.0" prefWidth="78.0" text="Update">
+                        <Button fx:id="updateButton2" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="35.0" prefWidth="78.0" text="Update">
                            <font>
                               <Font name="Impact" size="18.0" />
                            </font>
@@ -127,7 +127,7 @@
                               <Insets left="20.0" top="5.0" />
                            </HBox.margin>
                         </Button>
-                        <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="78.0" text="Delete">
+                        <Button fx:id="deleteButton2" mnemonicParsing="false" prefHeight="35.0" prefWidth="78.0" text="Delete">
                            <HBox.margin>
                               <Insets left="20.0" top="5.0" />
                            </HBox.margin>
@@ -139,7 +139,7 @@
                   </HBox>
                   <HBox layoutX="10.0" layoutY="100.0" prefHeight="45.0" prefWidth="200.0">
                      <children>
-                        <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="35.0" prefWidth="78.0" text="Update">
+                        <Button fx:id="updateButton3" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="35.0" prefWidth="78.0" text="Update">
                            <font>
                               <Font name="Impact" size="18.0" />
                            </font>
@@ -147,7 +147,7 @@
                               <Insets left="20.0" top="5.0" />
                            </HBox.margin>
                         </Button>
-                        <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="78.0" text="Delete">
+                        <Button fx:id="deleteButton3" mnemonicParsing="false" prefHeight="35.0" prefWidth="78.0" text="Delete">
                            <HBox.margin>
                               <Insets left="20.0" top="5.0" />
                            </HBox.margin>
@@ -159,7 +159,7 @@
                   </HBox>
                   <HBox layoutX="10.0" layoutY="145.0" prefHeight="45.0" prefWidth="200.0">
                      <children>
-                        <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="35.0" prefWidth="78.0" text="Update">
+                        <Button fx:id="updateButton4" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="35.0" prefWidth="78.0" text="Update">
                            <font>
                               <Font name="Impact" size="18.0" />
                            </font>
@@ -167,7 +167,7 @@
                               <Insets left="20.0" top="5.0" />
                            </HBox.margin>
                         </Button>
-                        <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="78.0" text="Delete">
+                        <Button fx:id="deleteButton4" mnemonicParsing="false" prefHeight="35.0" prefWidth="78.0" text="Delete">
                            <HBox.margin>
                               <Insets left="20.0" top="5.0" />
                            </HBox.margin>
@@ -179,7 +179,7 @@
                   </HBox>
                   <HBox layoutX="10.0" layoutY="190.0" prefHeight="45.0" prefWidth="200.0">
                      <children>
-                        <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="35.0" prefWidth="78.0" text="Update">
+                        <Button fx:id="updateButton5" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="35.0" prefWidth="78.0" text="Update">
                            <font>
                               <Font name="Impact" size="18.0" />
                            </font>
@@ -187,7 +187,7 @@
                               <Insets left="20.0" top="5.0" />
                            </HBox.margin>
                         </Button>
-                        <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="78.0" text="Delete">
+                        <Button fx:id="deleteButton5" mnemonicParsing="false" prefHeight="35.0" prefWidth="78.0" text="Delete">
                            <HBox.margin>
                               <Insets left="20.0" top="5.0" />
                            </HBox.margin>
@@ -199,7 +199,7 @@
                   </HBox>
                   <HBox layoutX="10.0" layoutY="235.0" prefHeight="45.0" prefWidth="200.0">
                      <children>
-                        <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="35.0" prefWidth="78.0" text="Update">
+                        <Button fx:id="updateButton6" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="35.0" prefWidth="78.0" text="Update">
                            <font>
                               <Font name="Impact" size="18.0" />
                            </font>
@@ -207,7 +207,7 @@
                               <Insets left="20.0" top="5.0" />
                            </HBox.margin>
                         </Button>
-                        <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="78.0" text="Delete">
+                        <Button fx:id="deleteButton6" mnemonicParsing="false" prefHeight="35.0" prefWidth="78.0" text="Delete">
                            <HBox.margin>
                               <Insets left="20.0" top="5.0" />
                            </HBox.margin>
@@ -219,7 +219,7 @@
                   </HBox>
                   <HBox layoutX="10.0" layoutY="280.0" prefHeight="45.0" prefWidth="200.0">
                      <children>
-                        <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="35.0" prefWidth="78.0" text="Update">
+                        <Button fx:id="updateButton7" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="35.0" prefWidth="78.0" text="Update">
                            <font>
                               <Font name="Impact" size="18.0" />
                            </font>
@@ -227,7 +227,7 @@
                               <Insets left="20.0" top="5.0" />
                            </HBox.margin>
                         </Button>
-                        <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="78.0" text="Delete">
+                        <Button fx:id="deleteButton7" mnemonicParsing="false" prefHeight="35.0" prefWidth="78.0" text="Delete">
                            <HBox.margin>
                               <Insets left="20.0" top="5.0" />
                            </HBox.margin>
@@ -239,7 +239,7 @@
                   </HBox>
                   <HBox layoutX="10.0" layoutY="325.0" prefHeight="45.0" prefWidth="200.0">
                      <children>
-                        <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="35.0" prefWidth="78.0" text="Update">
+                        <Button fx:id="updateButton8" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="35.0" prefWidth="78.0" text="Update">
                            <font>
                               <Font name="Impact" size="18.0" />
                            </font>
@@ -247,7 +247,7 @@
                               <Insets left="20.0" top="5.0" />
                            </HBox.margin>
                         </Button>
-                        <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="78.0" text="Delete">
+                        <Button fx:id="deleteButton8" mnemonicParsing="false" prefHeight="35.0" prefWidth="78.0" text="Delete">
                            <HBox.margin>
                               <Insets left="20.0" top="5.0" />
                            </HBox.margin>
@@ -259,7 +259,7 @@
                   </HBox>
                   <HBox layoutX="10.0" layoutY="370.0" prefHeight="45.0" prefWidth="200.0">
                      <children>
-                        <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="35.0" prefWidth="78.0" text="Update">
+                        <Button fx:id="updateButton9" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="35.0" prefWidth="78.0" text="Update">
                            <font>
                               <Font name="Impact" size="18.0" />
                            </font>
@@ -267,7 +267,7 @@
                               <Insets left="20.0" top="5.0" />
                            </HBox.margin>
                         </Button>
-                        <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="78.0" text="Delete">
+                        <Button fx:id="deleteButton9" mnemonicParsing="false" prefHeight="35.0" prefWidth="78.0" text="Delete">
                            <HBox.margin>
                               <Insets left="20.0" top="5.0" />
                            </HBox.margin>
